force-app/main/default/objects/Registration_Entry__c/Registration_Entry__c.object-meta.xml
<CustomObject>
    <label>Registration Entry</label>
    <nameField>
        <label>Attendee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>