force-app/main/default/objects/Registration_Entry__c/fields/Holomail__c.field-meta.xml
<CustomField>
    <fullName>Holomail__c</fullName>
    <label>Holomail</label>
    <type>Email</type>
</CustomField>