force-app/main/default/objects/Registration_Entry__c/fields/Is_Attending__c.field-meta.xml
<CustomField>
    <fullName>Is_Attending__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if planning to attend!</inlineHelpText>
    <label>Is Attending</label>
    <type>Checkbox</type>
</CustomField>