force-app/main/default/objects/Registration_Entry__c/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <label>Number of Guests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
                <default>true</default>
                <label>One</label>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>Five</fullName>
            </value>
            <value>
                <fullName>Six</fullName>
            </value>
            <value>
                <fullName>Seven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>